--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-native",
-  "version": "1000.0.0",
+  "version": "0.0.1",
   "description": "A framework for building native apps using React",
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "git@github.com:facebook/react-native.git"
+    "url": "git@github.com:adler0518/JFReactNative.git"
   },
   "engines": {
     "node": ">=4"
